# bazel.cmake

./: .clang-format  .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml  bazel.cmake
cmake/: bazel.cmake  color.cmake  compile.cmake  make_help  merge_libs.cmake
scripts/: build.sh
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  cpu_id.cc  cpu_id.h  cpu_id_test.cc  hello.cc
test/cuda/: CMakeLists.txt  vector_add.cu  vector_add_test.cu
test/proto/: CMakeLists.txt  add_person.cc  add_person.py
